# PQC-HA-TaPaSCo-Runtime

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  measure_performance_hls.py  measure_performance_sw.py
src/: drng.rs  known_answer_tests.rs  lib.rs  main.rs  pqc_algorithm.rs  tapasco_pqc.rs
src/pqc_algorithm/: classic_mceliece.rs  dilithium.rs  falcon.rs  hqc.rs  kyber.rs  sphincsplus.rs
