[package]
name = "tapasco_pqc_runtime"
version = "1.0.0"
authors = ["Richard Sattel <richard.sattel@stud.tu-darmstadt.de"]
edition = "2021"

[profile.release]
debug = true # for flamegraph
opt-level = 3
codegen-units = 1
lto = "fat"

[dependencies]
#tapasco = { path = "../tapasco/runtime/libtapasco" }
tapasco = { git = "https://github.com/esa-tu-darmstadt/tapasco", tag = "2022.1" }
clap = { version = "4.3.11", features = ["derive"] }
# Enable backtraces via this feature flag:
#snafu = { version = "0.7.4", features = ["backtraces"] }
snafu = "0.7.4"
nom = "7.1.3"
hex = "0.4.3"
# Maximum log level in debug builds is `trace` and in release builds `info`, everything else is compiled out:
log = { version = "0.4.19", features = ["max_level_trace", "release_max_level_info"] }
env_logger = "0.10.0"
rand = "0.8"
serde = { version = "1.0.171", features = ["derive"] }
serde-big-array = "0.5.1"
serde_json = "1.0.102"

# Software reference implementations from PQClean:
pqcrypto-traits = "0.3.4"
# Disable the AVX2/NEON implementation for benchmarking the clean C implementation:
#pqcrypto-kyber = { version = "0.7.3", default-features = false, features = [ "std" ] }
pqcrypto-kyber = "0.7.6"
# Disable the AVX2/NEON implementation for benchmarking the clean C implementation:
#pqcrypto-dilithium = { version = "0.4.3", default-features = false, features = [ "std" ] }
pqcrypto-dilithium = "0.4.6"
pqcrypto-falcon = "0.2.10"
pqcrypto-sphincsplus = "0.6.4"
pqcrypto-classicmceliece = "0.1.7"
pqcrypto-hqc = "0.1.6"
# Add `stacker` crate to resize the stack for Classic McEliece:
stacker = "0.1.15"

# AES is used in the Deterministic Random Number Generator to expand seeds for Known Answer Tests:
aes = "0.8.3"

# For simple performance measurements
devtimer = "4.0.1"
